data/all_generated_tests/raw_wast_tests/call_indirect_StackCorruption_4037.wast
;; 6. **Function Calls Leading to Stack Overflows**:    - Perform multiple nested `call_indirect` instructions where each function call itself calls another function indirectly.    - Constraint Check: Validate recursive handling of the call stack.    - Stack Corruption Relation: Unchecked deep recursion can lead to stack overflow and inconsistent function frames on the stack.

(assert_invalid
  (module
    (type $t0 (func))
    (func $f0 (result i32) (call_indirect $t0 (i32.const 0)))
    (func $f1 (param i32) (result i32) (call_indirect $t0 (i32.const 0)))
    (func $f2 (param i32 i32) (result i32) (call_indirect $t0 (i32.const 0)))
    (table 3 funcref)
    (elem (i32.const 0) $f0 $f1 $f2)
    (func (param i32 i32 i32) (result i32)
      (call_indirect $t0 (i32.const 0))
    )
  )
  "type mismatch"
)